Updated templpates for home and products_list

--- a/product_importer/templates/products_list.html
+++ b/product_importer/templates/products_list.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <table class="table table-bordered">
   <thead>
     <tr>
@@ -17,22 +20,23 @@
   </tbody>
 </table>
 
+<form type="get" action="." style="margin: 0">
+    <input id="search_key" type="text" name="search_key" value="{{search_key}}"  placeholder="Search Product..." >
+    <input id="is_active" type="checkbox" name="is_active" {% if is_active %} checked {% endif %} value="True"><label>Active</label> 
+    <button id="search_submit" type="submit" >Submit {{search_key}} {{is_active}}</button>
+</form>
+
 {% if is_paginated %}
   <ul class="pagination">
     {% if page_obj.has_previous %}
-      <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+      <!-- <li><a href="?page={{ page_obj.previous_page_number }}&search_key={{search_key}}">&laquo;</a></li> -->
+      <li><a href="javascript:document.location.href=getUrl({{ page_obj.previous_page_number }})">&laquo;</a></li>
     {% else %}
       <li class="disabled"><span>&laquo;</span></li>
     {% endif %}
-    {% for i in paginator.page_range %}
-      {% if page_obj.number == i %}
-        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-      {% else %}
-        <li><a href="?page={{ i }}">{{ i }}</a></li>
-      {% endif %}
-    {% endfor %}
+    <li class="active"><span>{{page_obj.number}} <span class="sr-only">(current)</span></span></li>
     {% if page_obj.has_next %}
-      <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+      <li><a href="javascript:document.location.href=getUrl({{ page_obj.next_page_number }})">&raquo;</a></li>
     {% else %}
       <li class="disabled"><span>&raquo;</span></li>
     {% endif %}
@@ -40,3 +44,16 @@
 {% endif %}
 
 
+
+<script type="text/javascript">
+    function getUrl(pageNumber) {
+        search_key = document.getElementById("search_key").value
+        is_active = document.getElementById("is_active").checked
+        url = "?page=" + pageNumber
+        url = search_key ? url + "&search_key=" + search_key : url
+        url = is_active ? url + "&is_active=True": url
+        return url
+    }
+</script>
+
+{% endblock %}
