--- a/product_importer/templates/index.html
+++ b/product_importer/templates/index.html
@@ -1,6 +1,8 @@
-Hello World
+{% extends 'base.html' %}
 
-<form action="{% url 'product_importer:upload_csv' %}" method="POST" enctype="multipart/form-data" class="form-horizontal">
+{% block content %}
+
+<form action="{% url 'product_importer:upload_csv' %}" method="POST" class="form-horizontal">
 {% csrf_token %}
 <div class="form-group">
     <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
@@ -18,55 +20,58 @@ Hello World
 
 
 <script type="text/javascript">
-	(function() {
-	  document.getElementById("csv_file").onchange = function(){
-	    var files = document.getElementById("csv_file").files;
-	    var file = files[0];
-	    if(!file){
-	      return alert("No file selected.");
-	    }
-	    getSignedRequest(file);
-	  };
-	})();
+    (function() {
+      document.getElementById("csv_file").onchange = function(){
+        var files = document.getElementById("csv_file").files;
+        var file = files[0];
+        if(!file){
+          return alert("No file selected.");
+        }
+        getSignedRequest(file);
+      };
+    })();
 
-	function getSignedRequest(file){
-	  var xhr = new XMLHttpRequest();
-	  xhr.open("GET", "/sign_s3?file_name="+file.name+"&file_type="+file.type);
-	  xhr.onreadystatechange = function(){
-	    if(xhr.readyState === 4){
-	      if(xhr.status === 200){
-	        var response = JSON.parse(xhr.responseText);
-	        uploadFile(file, response.data, response.url);
-	      }
-	      else{
-	        alert("Could not get signed URL.");
-	      }
-	    }
-	  };
-	  xhr.send();
-	}
+    function getSignedRequest(file){
+      var xhr = new XMLHttpRequest();
+      xhr.open("GET", "/sign_s3?file_name="+file.name+"&file_type="+file.type);
+      xhr.onreadystatechange = function(){
+        if(xhr.readyState === 4){
+          if(xhr.status === 200){
+            var response = JSON.parse(xhr.responseText);
+            uploadFile(file, response.data, response.url);
+          }
+          else{
+            alert("Could not get signed URL.");
+          }
+        }
+      };
+      xhr.send();
+    }
 
-	function uploadFile(file, s3Data, url){
-	  var xhr = new XMLHttpRequest();
-	  xhr.open("POST", s3Data.url);
+    function uploadFile(file, s3Data, url){
+      var xhr = new XMLHttpRequest();
+      console.log("Started uploading")
+      xhr.open("POST", s3Data.url);
+      var postData = new FormData();
+      for(key in s3Data.fields){
+        postData.append(key, s3Data.fields[key]);
+      }
+      postData.append('file', file);
 
-	  var postData = new FormData();
-	  for(key in s3Data.fields){
-	    postData.append(key, s3Data.fields[key]);
-	  }
-	  postData.append('file', file);
-
-	  xhr.onreadystatechange = function() {
-	    if(xhr.readyState === 4){
-	      if(xhr.status === 200 || xhr.status === 204){
-	        document.getElementById("file_url").value = url;
-	      }
-	      else{
-	        alert("Could not upload file.");
-	      }
-	    }
-	  };
-	  xhr.send(postData);
-	}
+      xhr.onreadystatechange = function() {
+        if(xhr.readyState === 4){
+          if(xhr.status === 200 || xhr.status === 204){
+            console.log("Finished uploading")
+            document.getElementById("file_url").value = url;
+          }
+          else{
+            alert("Could not upload file.");
+          }
+        }
+      };
+      xhr.send(postData);
+    }
 
 </script>
+
+{% endblock %}
