--- a/product_importer/templates/index.html
+++ b/product_importer/templates/index.html
@@ -7,13 +7,13 @@
 <div class="form-group">
     <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
     <div class="col-md-8">
-        <input type="file" name="csv_file" id="csv_file" required="True" class="form-control">
+        <input type="file" name="csv_file" id="csv_file" required="True" accept=".csv" class="form-control">
         <input type="hidden" name="file_url" id="file_url">
     </div>
 </div>
 <div class="form-group">
     <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
-         <button class="btn btn-primary"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Upload </button>
+         <button class="btn btn-primary" id="import_button" disabled="True"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Import </button>
     </div>
 </div>
 </form>
@@ -62,6 +62,7 @@
         if(xhr.readyState === 4){
           if(xhr.status === 200 || xhr.status === 204){
             console.log("Finished uploading")
+            document.getElementById("import_button").disabled = false;
             document.getElementById("file_url").value = url;
           }
           else{
