--- a/product_importer/templates/index.html
+++ b/product_importer/templates/index.html
@@ -12,8 +12,9 @@
     </div>
 </div>
 <div class="form-group">
+    <button class="btn btn-primary" id="uploading" style="display: none;" disabled="true"> Uploading File...</button>
     <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
-         <button class="btn btn-primary" id="import_button" disabled="True"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Import </button>
+         <button class="btn btn-primary" id="import_button" style="display: none;"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Import </button>
     </div>
 </div>
 </form>
@@ -27,6 +28,7 @@
         if(!file){
           return alert("No file selected.");
         }
+        document.getElementById("uploading").style.display = "inline"
         getSignedRequest(file);
       };
     })();
@@ -62,7 +64,8 @@
         if(xhr.readyState === 4){
           if(xhr.status === 200 || xhr.status === 204){
             console.log("Finished uploading")
-            document.getElementById("import_button").disabled = false;
+            document.getElementById("import_button").style.display = "inline";
+            document.getElementById("uploading").style.display = "none"
             document.getElementById("file_url").value = url;
           }
           else{
