Update templates   Add Header   Add redirect to Products page   Clean up Products page

--- a/product_importer/templates/products_list.html
+++ b/product_importer/templates/products_list.html
@@ -23,7 +23,7 @@
 <form type="get" action="." style="margin: 0">
     <input id="search_key" type="text" name="search_key" value="{{search_key}}"  placeholder="Search Product..." >
     <input id="is_active" type="checkbox" name="is_active" {% if is_active %} checked {% endif %} value="True"><label>Active</label> 
-    <button id="search_submit" type="submit" >Submit {{search_key}} {{is_active}}</button>
+    <button id="search_submit" type="submit" >Submit</button>
 </form>
 
 {% if is_paginated %}
@@ -34,7 +34,7 @@
     {% else %}
       <li class="disabled"><span>&laquo;</span></li>
     {% endif %}
-    <li class="active"><span>{{page_obj.number}} <span class="sr-only">(current)</span></span></li>
+    <li class="active"><span>{{page_obj}} <span class="sr-only">(current)</span></span></li>
     {% if page_obj.has_next %}
       <li><a href="javascript:document.location.href=getUrl({{ page_obj.next_page_number }})">&raquo;</a></li>
     {% else %}
