--- a/product_importer/templates/base.html
+++ b/product_importer/templates/base.html
@@ -3,5 +3,10 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 </head>
 
+<body>
+	<div class="page-header">
+        <h1><a href="/">Product Importer</a></h1>
+    </div>
+</body>
 {% block content %}
 {% endblock %}
