--- a/product_importer/templates/index.html
+++ b/product_importer/templates/index.html
@@ -1,24 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<form action="{% url 'product_importer:upload_csv' %}" method="POST" class="form-horizontal">
-{% csrf_token %}
-<div class="form-group">
-    <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
-    <div class="col-md-8">
-        <input type="file" name="csv_file" id="csv_file" required="True" accept=".csv" class="form-control">
-        <input type="hidden" name="file_url" id="file_url">
+<div class="jumbotron">
+    <form action="{% url 'product_importer:upload_csv' %}" method="POST" class="form-horizontal">
+    {% csrf_token %}
+    <div class="form-group">
+        <label for="name" class="col-md-3 col-sm-3 col-xs-12 control-label">File: </label>
+        <div class="col-md-8">
+            <input type="file" name="csv_file" id="csv_file" required="True" accept=".csv" class="form-control">
+            <input type="hidden" name="file_url" id="file_url">
+        </div>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary" id="uploading" style="display: none;" disabled="true"> Uploading File...</button>
+        <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
+             <button class="btn btn-primary" id="import_button" style="display: none;"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Import </button>
+        </div>
+    </div>
+    </form>
+</div>
+<div class="jumbotron" style="text-align:center">
+    <div style="margin-bottom:10px;">
+         <button class="btn btn-primary" id="products" onclick="location.href = 'products/';" > <span class="glyphicon glyphicon-share-alt" style="margin-right:5px;"></span>Go to Products Page</button>
     </div>
 </div>
-<div class="form-group">
-    <button class="btn btn-primary" id="uploading" style="display: none;" disabled="true"> Uploading File...</button>
-    <div class="col-md-3 col-sm-3 col-xs-12 col-md-offset-3" style="margin-bottom:10px;">
-         <button class="btn btn-primary" id="import_button" style="display: none;"> <span class="glyphicon glyphicon-upload" style="margin-right:5px;"></span>Import </button>
-    </div>
-</div>
-</form>
-
 
 <script type="text/javascript">
     (function() {
